# pyroexr

./: .gitignore  Cargo.toml  README.md  requirements.in  requirements.txt
.github/workflows/: ci.yml
src/: lib.rs
tests/: test_channel.py
